# cursos_online

./: DAS.TXT  Dockerfile  LICENSE  README.md  compose.db.yml  compose.yml  docker-compose.yml  init.sql  pyproject.toml  report.html  requirements.txt
.devcontainer/: Dockerfile.dev  compose.dev.yaml  devcontainer.json
.github/workflows/: docker-image.yml  python-app.yml
cursos_online/: __init__.py  __main__.py  busca.py  home.py  interface.py  pagina_inicial.py
cursos_online/cursos/: __init__.py  aula.py  curso.py  video.py
cursos_online/funcionalidades_auxiliares/: __init__.py  gerenciador_entidades.py
cursos_online/interfaces/: __init__.py  autenticacao.py  cadastro.py
cursos_online/pages/: __init__.py  busca.py  cadastro.py  login.py  matricula.py  menus_administrador.py  menus_aluno.py  menus_professor.py
cursos_online/sample_project/: __init__.py  __main__.py  docker-compose.yaml  entity_manager.py  user.py
cursos_online/testes/: test_senha.py
cursos_online/usuarios/: __init__.py  administrador.py  aluno.py  entity_manager.py  matricula.py  professor.py  user.py  usuario.py
testes/: test_usuarios.py
