[tool.poetry]
name = "cursos-online"
version = "0.1.0"
description = "Projeto plataforma de cursos online orientado a objetos"
authors = ["Joao Pedro <joaoprdo2.aluno@unipampa.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
datetime = "^5.5"
sqlalchemy = "^2.0.31"
pymysql = "^1.1.1"
faker = "^25.8.0"
streamlit = "^1.36.0"
cryptography = "^43.0.1"
pytest = "^8.3.3"
pytest-html = "^4.1.1"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
